<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/MytextSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/data_mode"
            android:textColor="@color/black_deep" />

        <Spinner
            android:id="@+id/send_mode"
            android:layout_width="120dp"
            android:layout_height="wrap_content" >
        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider_list" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/MytextSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/data_type"
            android:textColor="@color/black_deep" />

        <Spinner
            android:id="@+id/frame_type"
            android:layout_width="120dp"
            android:layout_height="40dp" >
        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider_list" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/MytextSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/frameFormat"
            android:textColor="@color/black_deep" />

        <Spinner
            android:id="@+id/frame_format"
            android:layout_width="120dp"
            android:layout_height="40dp" >
        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider_list" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/MytextSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/addr"
            android:textColor="@color/black_deep" />
        <!-- ID: 0x -->

        <com.aplex.webcan.flatui.view.FlatEditText
            android:id="@+id/can_id"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textNoSuggestions"
            android:text="@string/addr_value"
            android:textSize="18sp"
            flatui:fl_cornerRadius="0dp"
            flatui:fl_fieldStyle="fl_box" />
    </LinearLayout>

</LinearLayout>